--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 <h1>What's up Bennett?</h1>
-<a href="/client_list"> List of Prospective Clients</a>
+<a href="/clients"> List of Prospective Clients</a>
 <h2>New Client</h2>
