--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
-<h1>What's up Bennett?</h1>
+<h1>is it working yet?</h1>
 <a href="/clients"> List of Prospective Clients</a>
-<h2>New Client</h2>
+<a href="/new_client">New Client</a>
