--- a/views/client_list.erb
+++ b/views/client_list.erb
@@ -1,3 +1,4 @@
+
 <% @clients.each do |client| %>
 	<li>
 	 <a href="/clients/<%=client.id %>">
@@ -5,3 +6,4 @@
 	</li>
 
 <% end %>
+<a href="/">Home</a>
